final final final

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <header>
-            <img src="../wwr/images/logo.webp" class="logo" alt="Sample Logo">
+            <img src="./images/logo.webp" class="logo" alt="Sample Logo">
             <h1>Rafting Adventures</h1>
             <nav>
                 <ul class="navigation">
@@ -41,7 +41,7 @@
                         ecosystems we cherish. Join us for an adventure of a lifetime and create memories that will last long after the 
                         journey ends!</p>
                 </article>
-                <img src="../wwr/images/rafting.webp" alt="RaftingAdventure">
+                <img src="./images/rafting.webp" alt="RaftingAdventure">
             </div>
             <section class="heroherohero">
                 <h2>History</h2>
@@ -51,7 +51,7 @@
                     we prioritize safety, adventure, and creating lasting memories. Whether you're celebrating a special event, seeking an 
                     outdoor team-building experience, or simply want to connect with nature, RiverQuest Adventures is your gateway to an 
                     exciting, once-in-a-lifetime river journey. Book today and feel the rush!</p>
-                <img src="../wwr/images/rafting.webp" alt="RaftingAdventure">
+                <img src="./images/rafting.webp" alt="RaftingAdventure">
                 <p class="pp">Rafting Adventures Adventures is a premier rafting agency offering unforgettable river experiences for thrill-seekers and nature 
                     lovers alike. Nestled in the heart of stunning mountain landscapes, our expertly guided trips range from exhilarating 
                     rapids for adrenaline junkies to serene, scenic floats for families and first-timers. With over a decade of experience, 
@@ -63,23 +63,23 @@
                 <h2>Adventure Awaits You</h2>
                 <div>
                     <figure class="figure">
-                        <img src="../wwr/images/rafting1.webp" alt="RaftingAdventure2">
+                        <img src="./images/rafting1.webp" alt="RaftingAdventure2">
                         <figcaption>Rafting 1</figcaption>
                     </figure>
                     <figure class="figure">
-                        <img src="../wwr/images/rafting3.webp" alt="RaftingAdventure2">
+                        <img src="./images/rafting3.webp" alt="RaftingAdventure2">
                         <figcaption>Rafting 2</figcaption>
                     </figure>
                     <figure class="figure">
-                        <img src="../wwr/images/rafting1.webp" alt="RaftingAdventure2">
+                        <img src="./images/rafting1.webp" alt="RaftingAdventure2">
                         <figcaption>Rafting 3</figcaption>
                     </figure>
                     <figure class="figure">
-                        <img src="../wwr/images/rafting3.webp" alt="RaftingAdventure2">
+                        <img src="./images/rafting3.webp" alt="RaftingAdventure2">
                         <figcaption>Rafting 4</figcaption>
                     </figure>
                     <figure class="figure">
-                        <img src="../wwr/images/rafting1.webp" alt="RaftingAdventure2">
+                        <img src="./images/rafting1.webp" alt="RaftingAdventure2">
                         <figcaption>Rafting 5</figcaption>
                     </figure>
                 </div>
@@ -92,13 +92,13 @@
             <div class="footerimg">    
                 <nav class="sociallinks">
                     <a href="https://facebook.com">
-                        <img src="../wwr/images/facebook.webp" alt="Facebook" width="30">
+                        <img src="./images/facebook.webp" alt="Facebook" width="30">
                     </a>
                     <a href="https://twitter.com">
-                        <img src="../wwr/images/twitter.webp" alt="Twitter" width="30">
+                        <img src="./images/twitter.webp" alt="Twitter" width="30">
                     </a>
                     <a href="https://instagram.com">
-                        <img src="../wwr/images/instagram.webp" alt="Instagram" width="30">
+                        <img src="./images/instagram.webp" alt="Instagram" width="30">
                     </a>
                 </nav>
             </div>
