--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <header>
-            <img src="../wwr/images/logo.webp" class="logo" alt="Sample Logo">
+            <img src="./images/logo.webp" class="logo" alt="Sample Logo">
             <h1>Rafting Adventures</h1>
             <nav>
                 <ul class="navigation">
@@ -79,15 +79,15 @@
                 <h2>Our Employees</h2>
                 <div>
                     <figure class="figure">
-                        <img src="../wwr/images/employee1.webp" alt="Employee1" class="contactemployee">
+                        <img src="./images/employee1.webp" alt="Employee1" class="contactemployee">
                         <figcaption>Lorena Ochoa</figcaption>
                     </figure>
                     <figure class="figure">
-                        <img src="../wwr/images/employee2.webp" alt="Employee2" class="contactemployee">
+                        <img src="./images/employee2.webp" alt="Employee2" class="contactemployee">
                         <figcaption>Lamine Yamal</figcaption>
                     </figure>
                     <figure class="figure">
-                        <img src="../wwr/images/employee3.webp" alt="Employee3" class="contactemployee">
+                        <img src="./images/employee3.webp" alt="Employee3" class="contactemployee">
                         <figcaption>Robert Lewandowski</figcaption>
                     </figure>
                 </div>
@@ -101,13 +101,13 @@
             <div class="footerimg">    
                 <nav class="sociallinks">
                     <a href="https://facebook.com">
-                        <img src="../wwr/images/facebook.webp" alt="Facebook" width="30">
+                        <img src="./images/facebook.webp" alt="Facebook" width="30">
                     </a>
                     <a href="https://twitter.com">
-                        <img src="../wwr/images/twitter.webp" alt="Twitter" width="30">
+                        <img src="./images/twitter.webp" alt="Twitter" width="30">
                     </a>
                     <a href="https://instagram.com">
-                        <img src="../wwr/images/instagram.webp" alt="Instagram" width="30">
+                        <img src="./images/instagram.webp" alt="Instagram" width="30">
                     </a>
                 </nav>
             </div>
