--- a/wwr/index.html
+++ b/wwr/index.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <header>
-            <img src="../wwr/images/logo.webp" class="logo" alt="Sample Logo">
+            <img src="./images/logo.webp" class="logo" alt="Sample Logo">
             <h1>Rafting Adventures</h1>
             <nav>
                 <ul class="navigation">
@@ -35,25 +35,25 @@
                 <div class="divdivfigureindex">
                     <div>
                         <figure>
-                            <img src="../wwr/images/rivers3.webp" alt="rivers3" class="imgindex">
+                            <img src="./images/rivers3.webp" alt="rivers3" class="imgindex">
                         </figure>
-                        <img src="../wwr/images/rivers.svg" alt="riversvg" class="svgimg">
+                        <img src="./images/rivers.svg" alt="riversvg" class="svgimg">
                         <p>Rivers</p>
                     </div>
                     
                     <div>
                         <figure>
-                            <img src="../wwr/images/camping1.webp" alt="camping1" class="imgindex">
+                            <img src="./images/camping1.webp" alt="camping1" class="imgindex">
                         </figure>
-                        <img src="../wwr/images/camping.svg" alt="riversvg" class="svgimg">
+                        <img src="./images/camping.svg" alt="riversvg" class="svgimg">
                         <p>Camping</p>
                     </div>
 
                     <div>
                         <figure>
-                            <img src="../wwr/images/rafting5.webp" alt="rafting5" class="imgindex">
+                            <img src="./images/rafting5.webp" alt="rafting5" class="imgindex">
                         </figure>
-                        <img src="../wwr/images/rafting.svg" alt="riversvg" class="svgimg">
+                        <img src="./images/rafting.svg" alt="riversvg" class="svgimg">
                         <p>Rafting</p>
                     </div>
                     
@@ -62,7 +62,7 @@
 
             <section class="heroheroheroindex">
                 <div class="heroheroheroindeximg">
-                    <img src="../wwr/images/paisaje.jpg" alt="RaftingAdventure">
+                    <img src="./images/paisaje.jpg" alt="RaftingAdventure">
                 </div>
                 <div class="calltoactiontwo">
                     <h2>More Than Just The Thrill</h2>
@@ -81,13 +81,13 @@
             <div class="footerimg">    
                 <nav class="sociallinks">
                     <a href="https://facebook.com">
-                        <img src="../wwr/images/facebook.webp" alt="Facebook" width="30">
+                        <img src="./images/facebook.webp" alt="Facebook" width="30">
                     </a>
                     <a href="https://twitter.com">
-                        <img src="../wwr/images/twitter.webp" alt="Twitter" width="30">
+                        <img src="./images/twitter.webp" alt="Twitter" width="30">
                     </a>
                     <a href="https://instagram.com">
-                        <img src="../wwr/images/instagram.webp" alt="Instagram" width="30">
+                        <img src="./images/instagram.webp" alt="Instagram" width="30">
                     </a>
                 </nav>
             </div>
