--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <header>
-            <img src="../wwr/images/logo.webp" class="logo" alt="Sample Logo">
+            <img src="./images/logo.webp" class="logo" alt="Sample Logo">
             <h1>Rafting Adventures</h1>
             <nav>
                 <ul class="navigation">
@@ -33,9 +33,9 @@
                     <div class="backgroundfigures">
                         <h2>Rivers</h2> 
                         <figure>
-                            <img src="../wwr/images/rivers3.webp" alt="rivers3" class="imgtrips">
+                            <img src="./images/rivers3.webp" alt="rivers3" class="imgtrips">
                         </figure>
-                        <img src="../wwr/images/rivers.svg" alt="riversvg" class="svgimgtrips">
+                        <img src="./images/rivers.svg" alt="riversvg" class="svgimgtrips">
                         <div>
                             <p>Our River Tours offer a serene yet exhilarating way to experience the beauty of nature. Perfect for families and beginners, these guided trips navigate calm waters, allowing you to soak in stunning landscapes and observe local wildlife. Each tour is tailored to create a relaxing atmosphere while introducing you to the joys of paddling and river exploration. Whether you're looking to unwind or introduce your kids to the wonders of the outdoors, our River Tours provide a memorable escape each time you visit us.</p>
                             <a href="contact.html"><button>Book Now</button></a> 
@@ -45,9 +45,9 @@
                     <div class="backgroundfigures">
                         <h2>Camping</h2> 
                         <figure>
-                            <img src="../wwr/images/camping1.webp" alt="camping1" class="imgtrips">
+                            <img src="./images/camping1.webp" alt="camping1" class="imgtrips">
                         </figure>
-                        <img src="../wwr/images/camping.svg" alt="riversvg" class="svgimgtrips">
+                        <img src="./images/camping.svg" alt="riversvg" class="svgimgtrips">
                         <div>
                             <p>For those seeking a deeper connection with nature, our Camping Adventures combine the thrill of the outdoors with the comforts of home. Set against picturesque backdrops, these trips include guided hikes, campfire storytelling, and opportunities for stargazing under clear night skies. You’ll learn essential camping skills while enjoying delicious meals prepared in the great outdoors. It’s an ideal choice for groups and families who want to create lasting memories around the campfire, surrounded by the beauty.</p>
                             <a href="contact.html"><button>Book Now</button></a> 
@@ -57,9 +57,9 @@
                     <div class="backgroundfigures">
                         <h2>Rafting</h2>
                         <figure> 
-                            <img src="../wwr/images/rafting5.webp" alt="rafting5" class="imgtrips">
+                            <img src="./images/rafting5.webp" alt="rafting5" class="imgtrips">
                         </figure>
-                        <img src="../wwr/images/rafting.svg" alt="riversvg" class="svgimgtrips">
+                        <img src="./images/rafting.svg" alt="riversvg" class="svgimgtrips">
                         <div>
                             <p>Our Rafting Expeditions promise an unforgettable thrill ride! Navigate through challenging rapids and experience the rush of conquering nature’s powerful waterways. Each expedition is designed to test your skills while ensuring safety at every turn. Perfect for both seasoned rafters and newcomers, these trips are packed with excitement and camaraderie. Prepare for an action-packed adventure as you paddle through some of the most stunning and challenging rivers, creating memories that will last a lifetime.    </p>
                             <a href="contact.html"><button>Book Now</button></a> 
@@ -70,7 +70,7 @@
 
             <section class="heroheroheroindex">
                 <div class="heroheroheroindeximg">
-                    <img src="../wwr/images/paisaje.jpg" alt="RaftingAdventure">
+                    <img src="./images/paisaje.jpg" alt="RaftingAdventure">
                 </div>
                 <div class="calltoactiontwo">
                     <h2>More Than Just The Thrill</h2>
@@ -90,13 +90,13 @@
             <div class="footerimg">    
                 <nav class="sociallinks">
                     <a href="https://facebook.com">
-                        <img src="../wwr/images/facebook.webp" alt="Facebook" width="30">
+                        <img src="./images/facebook.webp" alt="Facebook" width="30">
                     </a>
                     <a href="https://twitter.com">
-                        <img src="../wwr/images/twitter.webp" alt="Twitter" width="30">
+                        <img src="./images/twitter.webp" alt="Twitter" width="30">
                     </a>
                     <a href="https://instagram.com">
-                        <img src="../wwr/images/instagram.webp" alt="Instagram" width="30">
+                        <img src="./images/instagram.webp" alt="Instagram" width="30">
                     </a>
                 </nav>
             </div>
